--- a/src/nav.css
+++ b/src/nav.css
@@ -1,5 +1,5 @@
 #nav {
-    position: sticky;
+    position: fixed;
     left: 0;
     top: 0;
     display: flex;
@@ -9,6 +9,11 @@
     height: 100vh;
     overflow: hidden;
     transition: 0.5s;
+}
+
+#spacer {
+    width: 60px;
+    height: 100vh;
 }
 
 .nav-button {
@@ -39,6 +44,11 @@
         width: 100vw;
         justify-content: center;
         transition: 0s;
+    }
+
+    #spacer {
+        height: 5rem;
+        width: 100vw;
     }
 
     .nav-item {
