--- a/src/nav.css
+++ b/src/nav.css
@@ -12,6 +12,7 @@
 }
 
 #spacer {
+    float: left;
     width: 60px;
     height: 100vh;
 }
@@ -47,6 +48,7 @@
     }
 
     #spacer {
+        float: none;
         height: 5rem;
         width: 100vw;
     }
