--- a/src/Layout.css
+++ b/src/Layout.css
@@ -8,5 +8,12 @@ button {
     border-radius: 0.5rem;
 }
 
-#body {
+Nav {
+    float: left;
+}
+
+@media only screen and (min-width: 768px) {
+    Nav {
+        float: none;
+    }
 }
