--- a/src/Layout.css
+++ b/src/Layout.css
@@ -11,6 +11,7 @@ button {
 #body {
     display: flex;
     flex-direction: row;
+    min-width: 60px;
 }
 
 @media only screen and (min-width: 768px) {
