--- a/src/Layout.css
+++ b/src/Layout.css
@@ -1,6 +1,11 @@
 a {
-    color: black;
-    text-decoration: none;
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+}
+
+a:hover {
+    color: #004e92;
+    /* font-size: 1.7rem; */
 }
 
 button {
