--- a/src/pages/aviation.css
+++ b/src/pages/aviation.css
@@ -1,36 +1,74 @@
 .aviation {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.checklists {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
     margin: 5rem;
 }
 
-.aircraft {
+.flight-plan {
+    margin: 6rem;
+    margin-bottom: 1rem;
+    width: fit-content;
+}
+
+.card-input-box {
+    width: 7.5rem;
+    height: 1em;
+    border-radius: 2rem;
+    border: #004e92 1px solid;
+    padding: 0.5rem;
+}
+
+.card-input-box:focus {
+    outline: none;
+}
+
+.card-button {
+    border-radius: 2rem;
+    border: #004e92 1px solid;
+    padding: 0.5rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: hsl(208, 100%, 65%);
+}
+
+.card-button:hover {
+    background-color: hsl(208, 100%, 61%);
+}
+
+.card {
     background: #46a2f2;
     padding: 2.5rem;
     border-radius: 3rem;
 }
 
-.aircraft > h2 {
+.card-title {
     margin: 0;
     text-align: center;
 }
 
-.aircraft > ul {
-    list-style: none;
+.card-text-container {
     text-align: center;
     padding: 0;
     padding-top: 1rem;
     margin: 0;
 }
 
-.aircraft li {
+.card-text {
     padding-top: 0.5rem;
 }
 
 @media only screen and (min-width: 768px) {
-    .aviation {
+    .checklists {
         flex-direction: row;
         width: auto;
         justify-content: center;
