--- a/src/pages/aviation.css
+++ b/src/pages/aviation.css
@@ -69,7 +69,7 @@
 
 .card-input-and-text {
     padding-top: 0.5rem;
-    white-space: nowrap;
+    text-align: center;
 }
 
 @media only screen and (min-width: 768px) {
