--- a/src/Layout.css
+++ b/src/Layout.css
@@ -1,10 +1,10 @@
 a {
-    color: rgb(0, 0, 0);
+    color: var(--link-color);
     text-decoration: underline;
 }
 
 a:hover {
-    color: #004e92;
+    color: var(--link-hover-color);
     /* font-size: 1.7rem; */
 }
 
