--- a/src/app.css
+++ b/src/app.css
@@ -2,8 +2,10 @@
     width: 7.5rem;
     height: 1em;
     border-radius: 2rem;
-    border: #004e92 1px solid;
+    border: var(--card-border-color) 1px solid;
     padding: 0.5rem;
+    background-color: var(--input-background-color);
+    color: var(--text-color);
 }
 
 .card-input-box:focus {
@@ -12,20 +14,20 @@
 
 .card-button {
     border-radius: 2rem;
-    border: #004e92 1px solid;
+    border: var(--card-border-color) 1px solid;
     padding: 0.5rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    background-color: hsl(208, 100%, 65%);
+    background-color: var(--card-background-color);
 }
 
 .card-button:hover {
-    background-color: hsl(208, 100%, 61%);
+    background-color: var(--button-hover-color);
 }
 
 .card {
-    background: #46a2f2;
+    background: var(--card-background-color);
     padding: 2.5rem;
     border-radius: 3rem;
 }
