--- a/src/nav.css
+++ b/src/nav.css
@@ -4,7 +4,7 @@
     top: 0;
     display: flex;
     flex-direction: column;
-    background-color: #46a2f2;
+    background-color: var(--card-background-color);
     width: 60px;
     height: 100vh;
     overflow: hidden;
@@ -17,7 +17,7 @@
 }
 
 .nav-button {
-    background-color: #46a2f2;
+    background-color: var(--card-background-color);
     align-self: flex-start;
     width: 40px;
     height: 40px;
@@ -30,7 +30,7 @@
     padding: 1.5rem 2rem;
     visibility: hidden;
     white-space: nowrap;
-    color: black;
+    color: var(--text-color);
     text-decoration: none;
 }
 
@@ -40,7 +40,7 @@
 
 .nav-item:hover,
 .nav-button:hover {
-    background-color: #2594f5;
+    background-color: var(--button-hover-color);
 }
 
 @media only screen and (min-width: 768px) {
