fixed the nav button when its hidden

--- a/src/nav.css
+++ b/src/nav.css
@@ -66,5 +66,8 @@
     .nav-button {
         visibility: hidden;
         width: 0;
+        padding: 0;
+        margin: 0;
+        height: 0;
     }
 }
